fix overflow

--- a/css/main.scss
+++ b/css/main.scss
@@ -37,7 +37,7 @@ html,body{
 }
 
 body *{
-    overflow:hidden;
+    // overflow:hidden;
 }
 
 body.inverse{
